syntax = "proto3";
option csharp_namespace = "SharedKernel.Contracts";
message OrderCreated {
  string orderId = 1;
  string userId = 2;
  int64 amount = 3;
  string description = 4;
  string eventId = 5;
  int64 occurredAtTicks = 6;
}