syntax = "proto3";
option csharp_namespace = "SharedKernel.Contracts";
message PaymentFailed {
  string orderId = 1;
  string userId = 2;
  string eventId = 3;
  int64 occurredAtTicks = 4;
  string reason = 5;
}